--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@funkybob/qs",
   "version": "1.1.1",
   "description": "Simple QueryString parsing and building",
-  "main": "index.js",
+  "browser": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
