--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "@funkybob/qs",
   "version": "1.1.1",
   "description": "Simple QueryString parsing and building",
-  "browser": "index.js",
+  "main": "dist/index.es.js",
+  "module": "index.js",
+  "files": [
+    "index.js",
+    "dist/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -15,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/funkybob/funky-qs/issues"
   },
-  "homepage": "https://github.com/funkybob/funky-qs#readme"
+  "homepage": "https://github.com/funkybob/funky-qs#readme",
+  "devDependencies": {
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel-minify": "^5.0.0",
+    "rollup-plugin-buble": "^0.19.2"
+  }
 }
