--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "rollup -c"
+    "prepare": "rollup -c && agadoo"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/funkybob/funky-qs#readme",
   "devDependencies": {
+    "agadoo": "^1.0.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel-minify": "^5.0.0",
     "rollup-plugin-buble": "^0.19.2"
