--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.1.2",
   "description": "Simple QueryString parsing and building",
   "main": "dist/index.es.js",
-  "module": "index.js",
   "files": [
     "index.js",
     "dist/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "rollup -c && agadoo"
+    "build": "rollup -c",
+    "prepare": "npm run build && agadoo && npm run docs",
+    "docs": "esdoc"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,20 @@
   "homepage": "https://github.com/funkybob/funky-qs#readme",
   "devDependencies": {
     "agadoo": "^1.0.0",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "rollup": "^0.65.2",
-    "rollup-plugin-terser": "^2.0.2"
+    "rollup-plugin-terser": "^2.0.2",
+    "rollup-plugin-typescript2": "^0.17.0",
+    "typescript": "^3.0.3"
+  },
+  "esdoc": {
+    "source": "./src",
+    "destination": "./docs",
+    "plugins": [
+      {
+        "name": "esdoc-standard-plugin"
+      }
+    ]
   }
 }
