--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "devDependencies": {
     "agadoo": "^1.0.0",
     "rollup": "^0.65.2",
-    "rollup-plugin-babel-minify": "^6.0.0",
-    "rollup-plugin-buble": "^0.19.2"
+    "rollup-plugin-terser": "^2.0.2"
   }
 }
